// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UniProtEvidenceTag components should render automatic  1`] = `
<DocumentFragment>
  <span
    class="evidence-tag svg-colour-unreviewed"
    data-testid="evidence-tag-trigger"
    role="button"
    tabindex="0"
  >
    <svg
      height="12"
      viewBox="0 0 512 512"
      width="12"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 252.118V48C0 21.49 21.49 0 48 0h204.118a48 48 0 0 1 33.941 14.059l211.882 211.882c18.745 18.745 18.745 49.137 0 67.882L293.823 497.941c-18.745 18.745-49.137 18.745-67.882 0L14.059 286.059A48 48 0 0 1 0 252.118zM112 64c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48z"
        id="Shape"
      />
    </svg>
    <span
      class="evidence-tag__label"
      title=""
    >
      Imported
    </span>
  </span>
  <div
    class="evidence-tag-content "
    data-testid="evidence-tag-content"
  >
    <div>
      <h5>
        Automatic assertion inferred from database entries
      </h5>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UniProtEvidenceTag components should render automatic annotation 1`] = `
<DocumentFragment>
  <span
    class="evidence-tag svg-colour-reviewed"
    data-testid="evidence-tag-trigger"
    role="button"
    tabindex="0"
  >
    <svg
      height="12"
      viewBox="0 0 512 512"
      width="12"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 252.118V48C0 21.49 21.49 0 48 0h204.118a48 48 0 0 1 33.941 14.059l211.882 211.882c18.745 18.745 18.745 49.137 0 67.882L293.823 497.941c-18.745 18.745-49.137 18.745-67.882 0L14.059 286.059A48 48 0 0 1 0 252.118zM112 64c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48z"
        id="Shape"
      />
    </svg>
    <span
      class="evidence-tag__label"
      title=""
    >
      1 automatic annotation
    </span>
  </span>
  <div
    class="evidence-tag-content "
    data-testid="evidence-tag-content"
  >
    <div>
      <h5>
        Automatic assertion according to rules
      </h5>
      <div>
        PROSITE-ProRule:PRU10023
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UniProtEvidenceTag components should render publications count 1`] = `
<DocumentFragment>
  <span
    class="evidence-tag svg-colour-reviewed"
    data-testid="evidence-tag-trigger"
    role="button"
    tabindex="0"
  >
    <svg
      height="12"
      viewBox="0 0 512 512"
      width="12"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 252.118V48C0 21.49 21.49 0 48 0h204.118a48 48 0 0 1 33.941 14.059l211.882 211.882c18.745 18.745 18.745 49.137 0 67.882L293.823 497.941c-18.745 18.745-49.137 18.745-67.882 0L14.059 286.059A48 48 0 0 1 0 252.118zM112 64c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48z"
        id="Shape"
      />
    </svg>
    <span
      class="evidence-tag__label"
      title=""
    >
      2 publications
    </span>
  </span>
  <div
    class="evidence-tag-content "
    data-testid="evidence-tag-content"
  >
    <div>
      <h5>
        Manual assertion based on experiment
      </h5>
      <div>
        PubMed:12345
      </div>
      <div>
        PubMed:12345
      </div>
    </div>
  </div>
</DocumentFragment>
`;
